--- a/RestSharpAPI/RestfulBookerAPI/ExtentReports/extent-report20231215_124939.html
+++ b/RestSharpAPI/RestfulBookerAPI/ExtentReports/extent-report20231215_124939.html
@@ -35,7 +35,7 @@
   <ul class="nav-right">
    <li class="m-r-10"><a href="#"><span class="badge badge-primary"></span></a></li>
    <li class="m-r-10">
-    <a href="#"><span class="badge badge-primary">12/15/2023 10:32:16 AM</span></a>
+    <a href="#"><span class="badge badge-primary">12/15/2023 12:49:39 PM</span></a>
    </li>
   </ul>
  </div>
@@ -86,7 +86,7 @@
           <div class="test-detail">
             <p class="name">Get Single Booking Id</p>
             <p class="text-sm">
-              <span>10:32:16 AM</span> / <span>661.07 ms</span>
+              <span>12:49:39 PM</span> / <span>1732.18 ms</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -95,9 +95,9 @@
               <div class="p-v-10">
                 <div class="info">
                   <h5 class="test-status text-pass">Get Single Booking Id</h5>
-                  <span class='badge badge-success'>12/15/2023 10:32:16 AM</span>
-                  <span class='badge badge-danger'>12/15/2023 10:32:16 AM</span>
-                  <span class='badge badge-default'>661.07 ms</span>
+                  <span class='badge badge-success'>12/15/2023 12:49:39 PM</span>
+                  <span class='badge badge-danger'>12/15/2023 12:49:41 PM</span>
+                  <span class='badge badge-default'>1732.18 ms</span>
                   &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
                   <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
                   <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -115,7 +115,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:32 AM</td>
+        <td>12:49 PM</td>
         <td>
 Get Single Booking Id Test passed all Asserts.        </td>
       </tr>
@@ -130,7 +130,7 @@ Get Single Booking Id Test passed all Asserts.        </td>
           <div class="test-detail">
             <p class="name">Get All Booking Ids</p>
             <p class="text-sm">
-              <span>10:32:16 AM</span> / <span>1547.77 ms</span>
+              <span>12:49:41 PM</span> / <span>1455.04 ms</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -139,9 +139,9 @@ Get Single Booking Id Test passed all Asserts.        </td>
               <div class="p-v-10">
                 <div class="info">
                   <h5 class="test-status text-pass">Get All Booking Ids</h5>
-                  <span class='badge badge-success'>12/15/2023 10:32:16 AM</span>
-                  <span class='badge badge-danger'>12/15/2023 10:32:18 AM</span>
-                  <span class='badge badge-default'>1547.77 ms</span>
+                  <span class='badge badge-success'>12/15/2023 12:49:41 PM</span>
+                  <span class='badge badge-danger'>12/15/2023 12:49:42 PM</span>
+                  <span class='badge badge-default'>1455.04 ms</span>
                   &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
                   <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
                   <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -159,7 +159,7 @@ Get Single Booking Id Test passed all Asserts.        </td>
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:32 AM</td>
+        <td>12:49 PM</td>
         <td>
 Get All Booking Ids test passed        </td>
       </tr>
@@ -174,7 +174,7 @@ Get All Booking Ids test passed        </td>
           <div class="test-detail">
             <p class="name">Create Booking</p>
             <p class="text-sm">
-              <span>10:32:18 AM</span> / <span>547.81 ms</span>
+              <span>12:49:42 PM</span> / <span>585.81 ms</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -183,9 +183,9 @@ Get All Booking Ids test passed        </td>
               <div class="p-v-10">
                 <div class="info">
                   <h5 class="test-status text-pass">Create Booking</h5>
-                  <span class='badge badge-success'>12/15/2023 10:32:18 AM</span>
-                  <span class='badge badge-danger'>12/15/2023 10:32:19 AM</span>
-                  <span class='badge badge-default'>547.81 ms</span>
+                  <span class='badge badge-success'>12/15/2023 12:49:42 PM</span>
+                  <span class='badge badge-danger'>12/15/2023 12:49:43 PM</span>
+                  <span class='badge badge-default'>585.81 ms</span>
                   &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
                   <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
                   <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -203,7 +203,7 @@ Get All Booking Ids test passed        </td>
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:32 AM</td>
+        <td>12:49 PM</td>
         <td>
 Create Booking passed all Asserts.        </td>
       </tr>
@@ -218,7 +218,7 @@ Create Booking passed all Asserts.        </td>
           <div class="test-detail">
             <p class="name">Update Booking </p>
             <p class="text-sm">
-              <span>10:32:19 AM</span> / <span>666 ms</span>
+              <span>12:49:43 PM</span> / <span>626.1 ms</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -227,9 +227,9 @@ Create Booking passed all Asserts.        </td>
               <div class="p-v-10">
                 <div class="info">
                   <h5 class="test-status text-pass">Update Booking </h5>
-                  <span class='badge badge-success'>12/15/2023 10:32:19 AM</span>
-                  <span class='badge badge-danger'>12/15/2023 10:32:19 AM</span>
-                  <span class='badge badge-default'>666 ms</span>
+                  <span class='badge badge-success'>12/15/2023 12:49:43 PM</span>
+                  <span class='badge badge-danger'>12/15/2023 12:49:43 PM</span>
+                  <span class='badge badge-default'>626.1 ms</span>
                   &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
                   <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
                   <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -247,7 +247,7 @@ Create Booking passed all Asserts.        </td>
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:32 AM</td>
+        <td>12:49 PM</td>
         <td>
 Update User Test Passed        </td>
       </tr>
@@ -262,7 +262,7 @@ Update User Test Passed        </td>
           <div class="test-detail">
             <p class="name">Delete Booking</p>
             <p class="text-sm">
-              <span>10:32:19 AM</span> / <span>1561.66 ms</span>
+              <span>12:49:43 PM</span> / <span>1384.83 ms</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -271,9 +271,9 @@ Update User Test Passed        </td>
               <div class="p-v-10">
                 <div class="info">
                   <h5 class="test-status text-pass">Delete Booking</h5>
-                  <span class='badge badge-success'>12/15/2023 10:32:19 AM</span>
-                  <span class='badge badge-danger'>12/15/2023 10:32:21 AM</span>
-                  <span class='badge badge-default'>1561.66 ms</span>
+                  <span class='badge badge-success'>12/15/2023 12:49:43 PM</span>
+                  <span class='badge badge-danger'>12/15/2023 12:49:45 PM</span>
+                  <span class='badge badge-default'>1384.83 ms</span>
                   &middot; <span class='uri-anchor badge badge-default'>#test-id=5</span>
                   <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
                   <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -291,7 +291,7 @@ Update User Test Passed        </td>
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:32 AM</td>
+        <td>12:49 PM</td>
         <td>
 Delete Booking test passed        </td>
       </tr>
@@ -306,7 +306,7 @@ Delete Booking test passed        </td>
           <div class="test-detail">
             <p class="name">Create Auth Token</p>
             <p class="text-sm">
-              <span>10:32:21 AM</span> / <span>825.53 ms</span>
+              <span>12:49:45 PM</span> / <span>646.83 ms</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -315,9 +315,9 @@ Delete Booking test passed        </td>
               <div class="p-v-10">
                 <div class="info">
                   <h5 class="test-status text-pass">Create Auth Token</h5>
-                  <span class='badge badge-success'>12/15/2023 10:32:21 AM</span>
-                  <span class='badge badge-danger'>12/15/2023 10:32:22 AM</span>
-                  <span class='badge badge-default'>825.53 ms</span>
+                  <span class='badge badge-success'>12/15/2023 12:49:45 PM</span>
+                  <span class='badge badge-danger'>12/15/2023 12:49:45 PM</span>
+                  <span class='badge badge-default'>646.83 ms</span>
                   &middot; <span class='uri-anchor badge badge-default'>#test-id=6</span>
                   <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
                   <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -335,7 +335,7 @@ Delete Booking test passed        </td>
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:32 AM</td>
+        <td>12:49 PM</td>
         <td>
 Create Auth Token Test Passed        </td>
       </tr>
@@ -350,7 +350,7 @@ Create Auth Token Test Passed        </td>
           <div class="test-detail">
             <p class="name">Partial Update Booking </p>
             <p class="text-sm">
-              <span>10:32:22 AM</span> / <span>641.58 ms</span>
+              <span>12:49:45 PM</span> / <span>479.63 ms</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -359,9 +359,9 @@ Create Auth Token Test Passed        </td>
               <div class="p-v-10">
                 <div class="info">
                   <h5 class="test-status text-pass">Partial Update Booking </h5>
-                  <span class='badge badge-success'>12/15/2023 10:32:22 AM</span>
-                  <span class='badge badge-danger'>12/15/2023 10:32:22 AM</span>
-                  <span class='badge badge-default'>641.58 ms</span>
+                  <span class='badge badge-success'>12/15/2023 12:49:45 PM</span>
+                  <span class='badge badge-danger'>12/15/2023 12:49:46 PM</span>
+                  <span class='badge badge-default'>479.63 ms</span>
                   &middot; <span class='uri-anchor badge badge-default'>#test-id=7</span>
                   <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
                   <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -379,7 +379,7 @@ Create Auth Token Test Passed        </td>
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:32 AM</td>
+        <td>12:49 PM</td>
         <td>
 Partial Update Booking Test Passed        </td>
       </tr>
@@ -394,7 +394,7 @@ Partial Update Booking Test Passed        </td>
           <div class="test-detail">
             <p class="name">Get Health Check</p>
             <p class="text-sm">
-              <span>10:32:22 AM</span> / <span>663.23 ms</span>
+              <span>12:49:46 PM</span> / <span>487.51 ms</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -403,9 +403,9 @@ Partial Update Booking Test Passed        </td>
               <div class="p-v-10">
                 <div class="info">
                   <h5 class="test-status text-pass">Get Health Check</h5>
-                  <span class='badge badge-success'>12/15/2023 10:32:22 AM</span>
-                  <span class='badge badge-danger'>12/15/2023 10:32:23 AM</span>
-                  <span class='badge badge-default'>663.23 ms</span>
+                  <span class='badge badge-success'>12/15/2023 12:49:46 PM</span>
+                  <span class='badge badge-danger'>12/15/2023 12:49:46 PM</span>
+                  <span class='badge badge-default'>487.51 ms</span>
                   &middot; <span class='uri-anchor badge badge-default'>#test-id=8</span>
                   <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
                   <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -423,7 +423,7 @@ Partial Update Booking Test Passed        </td>
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:32 AM</td>
+        <td>12:49 PM</td>
         <td>
 Get Health Check test passed        </td>
       </tr>
@@ -449,13 +449,13 @@ Get Health Check test passed        </td>
     <div class="col-md-3">
       <div class="card"><div class="card-body">
           <p class="m-b-0">Started</p>
-          <h3>12/15/2023 10:32:16 AM</h3>
+          <h3>12/15/2023 12:49:39 PM</h3>
       </div></div>
     </div>
     <div class="col-md-3">
       <div class="card"><div class="card-body">
           <p class="m-b-0">Ended</p>
-          <h3>12/15/2023 10:32:23 AM</h3>
+          <h3>12/15/2023 12:49:46 PM</h3>
       </div></div>
     </div>
     <div class="col-md-3">
@@ -524,7 +524,7 @@ Get Health Check test passed        </td>
     </div>
   </div></div>
   <script>
-	var timeline = { "Get Single Booking Id":661.0655,"Get All Booking Ids":1547.7683,"Create Booking":547.8104,"Update Booking ":665.9998,"Delete Booking":1561.655,"Create Auth Token":825.5303,"Partial Update Booking ":641.5831,"Get Health Check":663.2281 };
+	var timeline = { "Get Single Booking Id":1732.1825,"Get All Booking Ids":1455.039,"Create Booking":585.8083,"Update Booking ":626.1045,"Delete Booking":1384.8253,"Create Auth Token":646.8339,"Partial Update Booking ":479.633,"Get Health Check":487.5131 };
   </script>
   <div class="row">
   </div>
